@@ -1,5 +1,9 @@
 2012-01-04  Joel Brobecker  <brobecker@adacore.com>
 
+	* linespec.c (add_minsym): Preserve function descriptors.
+
+2012-01-04  Joel Brobecker  <brobecker@adacore.com>
+
 	* linespec.c (struct collect_minsyms) [list_mode]: New field.
 	(add_minsym): Ignore data symbols if not in list mode.
 	(search_minsyms_for_name): Set local.list_mode.
